# RealState_Bi

./: README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
clients/: ClientDataAggregations.py  ClientLogger.py  ClientMetrics.py  ClientProcessingCleaning.py  ClientProxies.py  ClientSesMysql.py  ClientThreads.py
processing/: pipeline.py  processing_step_1.py  processing_step_2.py  processing_step_3.py
